# Intelligent-Health

./: .dockerignore  .env  .gcloudignore  .gitignore  App.tsx  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  REPOSITORY_ANALYSIS_AND_GAPS.md  USER_MANUAL.md  _temp_db_inspect.py  app.yaml  build_error.txt  cloudbuild.yaml  compile_log.txt  constants.tsx  db_error.txt  db_output.txt  debug_import_ai.py  debug_imports.py  debug_models.py  debug_output.txt  debug_sdk_deep.py  debug_sdk_import.py  debug_startup.py  deploy_output.txt  docker-compose.yml  errors.txt  i18n.ts  implementation_plan_microservices.md  index.css  index.html  inspect_db.py  inspect_db_file.py  intelligent_health.db  intelligent_health_dev.db  metadata.json  nurse_test_details.txt  nurse_test_output.txt  (+38 more)
MCP/: mcp,json
alembic/: env.py
components/: AIAssistantWidget.tsx  AIChat.tsx  AIChatbot.tsx  AdminFinanceSettings.tsx  AdminLayout.tsx  AntigravityManager.tsx  Auth.tsx  CaseDiscussion.tsx  ClinicalGuidelinesCard.tsx  ConnectDevice.tsx  CreateCaseForm.tsx  CreditBalance.tsx  Footer.tsx  Header.tsx  ImageAnalysis.tsx  LanguageSwitcher.tsx  Modal.tsx  NotificationBell.tsx  PayPalPayment.tsx  PrivacyView.tsx  ReferralCard.tsx  StripePayment.tsx  Toast.tsx  Tooltip.tsx  UserProfileModal.tsx  VoiceCaseCreationModal.tsx  VoiceInput.tsx  VoiceRecorder.tsx
constants/: index.tsx
contracts/: README.md
contracts/access_control/: Cargo.toml  lib.rs
docs/: Concordium_Implementation_Summary.md  DEPLOYMENT_GUIDE_V2.md  DEPLOYMENT_NOTES.md  GUIDE_DB_CONNECTION.md  HARDWARE_SDK.md  (+16 more)
(+411 files in other folders)
