[package]
name = "access_control"
version = "0.1.0"
authors = ["Intelligent Health Team"]
edition = "2021"

[dependencies]
concordium-std = { version = "5.1", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["concordium-std/std", "serde/std"]
wasm-test = []
